--- a/style.css
+++ b/style.css
@@ -6,3 +6,20 @@
 .custom {
   background-color: #2b5b9b;
 }
+
+.uniform-img {
+  height: 300px;
+  width: 100%;
+  max-width: 600px; /* Set a max width to prevent excessive stretching */
+  object-fit: cover;
+  border-radius: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body {
+  background-color: #FFDE59;
+}
+
+
